--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -601,6 +601,7 @@
     <item name="android:textColor">#e7000000</item>
     <item name="android:textSize">14sp</item>
     <item name="android:letterSpacing">0.01</item>
+    <item name="android:lineSpacingExtra">6sp</item>
   </style>
 
   <style name="Promotions.TextStyle.Category.Subtitle" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
@@ -635,6 +636,7 @@
     <item name="android:textColor">#01131f</item>
     <item name="android:textSize">11sp</item>
     <item name="android:ellipsize">end</item>
+    <item name="android:lineSpacingExtra">5sp</item>
   </style>
 
   <style name="Promotions.TextStyle.Links" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
