--- a/app/src/main/res/layout/fragment_promotions.xml
+++ b/app/src/main/res/layout/fragment_promotions.xml
@@ -22,6 +22,7 @@
       />
 
   <androidx.coordinatorlayout.widget.CoordinatorLayout
+      android:id="@+id/bottomsheet_coordinator_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -29,13 +30,19 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:background="@color/bottom_sheet_translucent_background"
+      android:elevation="2dp"
+      android:visibility="gone"
+      android:clickable="true"
+      android:focusable="true"
       >
+
   <include
       android:id="@+id/bottom_sheet_fragment_container"
       layout="@layout/gamification_info_bottom_sheet"
       android:layout_width="match_parent"
       android:layout_height="@dimen/bottom_sheet_small_height"
       app:behavior_hideable="true"
+      app:behavior_peekHeight="0dp"
       app:layout_behavior="@string/bottom_sheet_behavior"
       />
 
