--- a/app/src/main/res/layout/gamification_info_bottom_sheet.xml
+++ b/app/src/main/res/layout/gamification_info_bottom_sheet.xml
@@ -14,23 +14,26 @@
     >
 
   <TextView
-      android:id="@+id/tvSignUp"
+      android:id="@+id/description"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Sign Up"
-      android:textSize="14dp"
+      android:text="@string/perks_purchases_disclaimer_body"
+      style="@style/BottomSheetInfoTextStyle"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       />
 
   <Button
+      android:id="@+id/got_it_button"
       style="@style/ButtonStyle"
-      android:layout_width="wrap_content"
+      android:layout_width="134dp"
       android:layout_height="wrap_content"
-      android:text="Got It"
+      android:text="@string/got_it_button"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/description"
+      app:layout_constraintVertical_bias="1"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
