--- a/app/src/main/res/layout/item_promotions_gamification.xml
+++ b/app/src/main/res/layout/item_promotions_gamification.xml
@@ -60,17 +60,17 @@
           android:textColor="@color/white"
           android:textSize="12sp"
           android:textStyle="bold"
-          app:layout_constraintEnd_toStartOf="@id/gamification_info"
+          app:layout_constraintEnd_toStartOf="@id/gamification_info_btn"
           app:layout_constraintTop_toTopOf="parent"
           tools:text="14% Bonus"
           />
       
       <ImageButton
-          android:id="@+id/gamification_info"
-          android:layout_width="32dp"
-          android:layout_height="25dp"
-          android:layout_marginTop="16dp"
-          android:layout_marginEnd="15dp"
+          android:id="@+id/gamification_info_btn"
+          android:layout_width="48dp"
+          android:layout_height="40dp"
+          android:paddingTop="16dp"
+          android:paddingEnd="15dp"
           android:src="@drawable/ic_info"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent"
