[MOB-1008] Added click listener to perk card notification

--- a/app/src/main/res/layout/item_card_notification.xml
+++ b/app/src/main/res/layout/item_card_notification.xml
@@ -1,9 +1,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/referrals_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
     android:maxWidth="328dp"
     app:cardCornerRadius="4dp"
     app:cardElevation="2dp"
