--- a/app/src/main/res/layout/verified_wallet_chip.xml
+++ b/app/src/main/res/layout/verified_wallet_chip.xml
@@ -1,48 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/balance_verify_chip_background"
-    app:cardCornerRadius="9dp"
-    app:cardElevation="0dp"
+    android:orientation="horizontal"
     >
 
-  <androidx.constraintlayout.widget.ConstraintLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:orientation="horizontal"
-      android:paddingStart="4dp"
-      android:paddingEnd="4dp"
-      >
+  <ImageView
+      android:id="@+id/chip_icon"
+      android:layout_width="11dp"
+      android:layout_height="11dp"
+      android:scaleType="centerInside"
+      android:src="@drawable/ic_wallet_verified_chip"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/chip_text"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
 
-    <ImageView
-        android:id="@+id/chip_icon"
-        android:layout_width="11dp"
-        android:layout_height="11dp"
-        android:layout_marginEnd="3dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_wallet_verified_chip"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/chip_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+  <TextView
+      android:id="@+id/chip_text"
+      style="@style/BalanceVerifyWalletChip"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="4dp"
+      android:ellipsize="end"
+      android:maxLines="1"
+      android:text="@string/verified_tag"
+      app:layout_constraintBottom_toBottomOf="@id/chip_icon"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@id/chip_icon"
+      app:layout_constraintTop_toTopOf="@id/chip_icon"
+      />
 
-    <TextView
-        android:id="@+id/chip_text"
-        style="@style/BalanceVerifyWalletChip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/verified_tag"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/chip_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        android:maxLines="1"
-        android:ellipsize="end"
-        />
-
-  </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
