--- a/app/src/main/res/layout/adyen_credit_card_layout.xml
+++ b/app/src/main/res/layout/adyen_credit_card_layout.xml
@@ -11,6 +11,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
+      android:animateLayoutChanges="true"
       android:background="@drawable/background_card_grey"
       android:orientation="vertical"
       >
