--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -170,7 +170,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="14dp"
                 android:src="@drawable/ic_wallet_black"
                 app:layout_constraintHorizontal_chainStyle="packed"
@@ -190,24 +190,13 @@
                 android:textColor="@color/black"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="@id/wallet_icon"
-                app:layout_constraintEnd_toStartOf="@id/verification_status"
+                app:layout_constraintEnd_toStartOf="@id/copy_address"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toEndOf="@id/wallet_icon"
                 app:layout_constraintTop_toTopOf="@id/wallet_icon"
                 app:layout_constraintWidth_default="wrap"
                 />
-
-            <RelativeLayout
-                android:id="@+id/verification_status"
-                android:layout_width="wrap_content"
-                android:layout_height="16dp"
-                android:layout_marginStart="3dp"
-                app:layout_constraintBottom_toBottomOf="@id/active_wallet_text"
-                app:layout_constraintEnd_toStartOf="@id/copy_address"
-                app:layout_constraintStart_toEndOf="@id/active_wallet_text"
-                app:layout_constraintTop_toTopOf="@id/active_wallet_text"
-                ></RelativeLayout>
 
             <TextView
                 android:id="@+id/active_wallet_address"
@@ -256,7 +245,7 @@
                 android:id="@+id/backup_active_button"
                 android:layout_width="26dp"
                 android:layout_height="26dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="14dp"
                 android:background="@drawable/borderless_button_background"
                 android:clickable="true"
                 android:focusable="true"
@@ -266,82 +255,33 @@
                 app:layout_constraintTop_toTopOf="@id/wallet_icon"
                 />
 
-            <include
+            <TextView
                 android:id="@+id/verified_wallet_chip"
-                layout="@layout/verified_wallet_chip"
+                style="@style/BalanceVerifyWalletChip"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:text="@string/verified_tag"
                 android:visibility="gone"
+                app:drawableStartCompat="@drawable/ic_wallet_verified_chip"
                 app:layout_constraintStart_toStartOf="@id/active_wallet_address"
                 app:layout_constraintTop_toBottomOf="@id/active_wallet_address"
                 tools:visibility="visible"
                 />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <include
                 android:id="@+id/unverified_wallet_layout"
+                layout="@layout/unverified_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:background="@drawable/background_dark_grey"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/active_wallet_address"
-                >
-
-              <ImageView
-                  android:id="@+id/chip_icon"
-                  android:layout_width="14dp"
-                  android:layout_height="14dp"
-                  android:layout_marginStart="8dp"
-                  android:src="@drawable/ic_wallet_unverified_chip"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  app:layout_constraintStart_toStartOf="parent"
-                  app:layout_constraintTop_toTopOf="parent"
-                  />
-
-              <TextView
-                  android:id="@+id/chip_text"
-                  style="@style/BalanceVerifyWalletChip.Unverified"
-                  android:layout_width="0dp"
-                  android:layout_height="wrap_content"
-                  android:layout_marginStart="8dp"
-                  android:layout_marginEnd="8dp"
-                  android:ellipsize="end"
-                  android:maxLines="2"
-                  android:text="@string/unferified_tag"
-                  app:layout_constraintBottom_toBottomOf="@id/chip_icon"
-                  app:layout_constraintEnd_toStartOf="@id/verify_wallet_button"
-                  app:layout_constraintStart_toEndOf="@id/chip_icon"
-                  app:layout_constraintTop_toTopOf="@id/chip_icon"
-                  />
-              <Button
-                  android:id="@+id/verify_wallet_button"
-                  style="@style/VerifyButtonStyle"
-                  android:layout_width="0dp"
-                  android:layout_height="wrap_content"
-                  android:layout_marginTop="6dp"
-                  android:layout_marginEnd="16dp"
-                  android:layout_marginBottom="6dp"
-                  android:text="@string/referral_view_verify_button"
-                  android:visibility="gone"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  app:layout_constraintEnd_toEndOf="parent"
-                  app:layout_constraintHorizontal_bias="1"
-                  app:layout_constraintStart_toStartOf="@id/horizontal_guideline"
-                  app:layout_constraintTop_toTopOf="parent"
-                  app:layout_constraintWidth_default="wrap"
-                  tools:visibility="visible"
-                  />
-              <androidx.constraintlayout.widget.Guideline
-                  android:id="@+id/horizontal_guideline"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:orientation="vertical"
-                  app:layout_constraintGuide_percent="0.4"
-                  />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                tools:visibility="visible"
+                />
           </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
         <LinearLayout
