--- a/app/src/main/res/layout-land/payment_methods_layout.xml
+++ b/app/src/main/res/layout-land/payment_methods_layout.xml
@@ -140,6 +140,7 @@
           app:layout_constraintStart_toStartOf="@id/bonus_layout"
           app:layout_constraintTop_toBottomOf="@+id/bonus_layout"
           app:layout_constraintVertical_bias="1"
+          app:layout_constraintWidth_default="wrap"
           tools:visibility="visible"
           />
 
