--- a/app/src/main/res/layout-land/payment_methods_layout.xml
+++ b/app/src/main/res/layout-land/payment_methods_layout.xml
@@ -134,13 +134,13 @@
           android:layout_marginTop="8dp"
           android:layout_marginEnd="@dimen/big_margin"
           android:gravity="start"
+          android:text="@string/gamification_purchase_body"
           android:visibility="invisible"
           app:layout_constraintEnd_toEndOf="@id/mid_guideline"
           app:layout_constraintStart_toStartOf="@id/bonus_layout"
           app:layout_constraintTop_toBottomOf="@+id/bonus_layout"
           app:layout_constraintVertical_bias="1"
           app:layout_constraintWidth_default="wrap"
-          tools:text="@string/gamification_purchase_body"
           tools:visibility="visible"
           />
 
