[WAL-54] Fixed bug when rotating to landscape while doing authentication where the switch would not update correctly

--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -27,7 +27,7 @@
       android:layout="@layout/preference_without_summary_layout"
       android:title="@string/import_wallet_title" />
 
-  <SwitchPreference
+  <SwitchPreferenceCompat
       android:id="@+id/preference_fingerprint"
       android:icon="@drawable/ic_settings_fingerprint"
       android:key="pref_fingerprint"
