[WAL-35] Improved UI for reverted transaction items

--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -19,6 +19,7 @@
       android:layout_marginBottom="@dimen/big_padding"
       android:contentDescription="@string/empty"
       android:scaleType="fitCenter"
+      app:layout_constraintBottom_toTopOf="@id/revert_message"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:src="@drawable/ic_transaction_peer"
@@ -124,7 +125,6 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/big_margin"
-      android:layout_marginTop="13dp"
       android:layout_marginEnd="@dimen/big_margin"
       android:layout_marginBottom="@dimen/big_padding"
       android:visibility="gone"
