--- a/app/src/main/res/layout/layout_reverted_transaction.xml
+++ b/app/src/main/res/layout/layout_reverted_transaction.xml
@@ -13,7 +13,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/big_margin"
-      android:text="Original transaction"
+      android:text="@string/transaction_reverted_view_original_header"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       />
