--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -186,7 +186,6 @@
   </style>
 
   <style name="FloatingButtonStyle" parent="Widget.MaterialComponents.Button">
-    <!--<item name="android:background">@draw~able/floating_button_background</item>-->
     <item name="android:backgroundTint">@color/floating_btn_start_gradient_color</item>
     <item name="android:textAllCaps">true</item>
     <item name="android:textColor">@drawable/btn_text_color</item>
@@ -220,6 +219,14 @@
   <style name="TransactionDetailsTextStyle.Title">
     <item name="android:textSize">16sp</item>
     <item name="android:textColor">#000000</item>
+  </style>
+
+  <style name="TransactionDetailsTextStyle.Reverted">
+    <item name="android:textColor">#212121</item>
+    <item name="android:textAlignment">center</item>
+    <item name="android:gravity">center_horizontal</item>
+    <item name="android:alpha">0.54</item>
+    <item name="android:lineSpacingExtra">6sp</item>
   </style>
 
   <style name="ButtonStyle.Light" parent="Base.Widget.AppCompat.ImageButton">
