--- a/app/src/main/res/layout/layout_reverted_transaction.xml
+++ b/app/src/main/res/layout/layout_reverted_transaction.xml
@@ -45,7 +45,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="?selectableItemBackground"
         android:elevation="@dimen/component_elevation"
         android:paddingTop="@dimen/normal_padding"
         >
