--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
   <color name="colorPrimary">#fc9d48</color>
   <color name="colorPrimaryDark">#e44b46</color>
   <color name="colorAccent">#e44b46</color>
-  <color name="primaryColor">@color/btn_end_gradient_color</color>
+  <color name="primaryColor">#000000</color>
   <color name="pinkish_orange">#fe6446</color>
   <color name="statusBarColor">#154868</color>
   <color name="activity_background_color">#fafafa</color>
