--- a/app/src/main/res/layout/layout_billing_address.xml
+++ b/app/src/main/res/layout/layout_billing_address.xml
@@ -18,11 +18,9 @@
       >
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/address"
+        style="@style/BillingAddressInputEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-        android:maxLines="1"
-        android:textSize="14sp"
         tools:text="Amphitheatre Parkway"
         />
   </com.google.android.material.textfield.TextInputLayout>
@@ -40,11 +38,9 @@
       >
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/number"
+        style="@style/BillingAddressInputEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-        android:maxLines="1"
-        android:textSize="14sp"
         tools:text="36"
         />
   </com.google.android.material.textfield.TextInputLayout>
@@ -62,11 +58,9 @@
       >
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/city"
+        style="@style/BillingAddressInputEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-        android:maxLines="1"
-        android:textSize="14sp"
         tools:text="Mountain View"
         />
   </com.google.android.material.textfield.TextInputLayout>
@@ -85,12 +79,10 @@
       >
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/zipcode"
+        style="@style/BillingAddressInputEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:imeOptions="flagNoExtractUi|flagNoFullscreen"
         android:inputType="number"
-        android:maxLines="1"
-        android:textSize="14sp"
         tools:text="94043"
         />
   </com.google.android.material.textfield.TextInputLayout>
