--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -534,6 +534,12 @@
     <item name="android:textSize">16sp</item>
   </style>
 
+  <style name="BillingAddressInputEditText">
+    <item name="android:imeOptions">flagNoExtractUi|flagNoFullscreen</item>
+    <item name="android:maxLines">1</item>
+    <item name="android:textSize">14sp</item>
+  </style>
+
   <style name="BillingDropDown" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
     <item name="android:textColorHint">@color/grey</item>
     <item name="android:textColor">#000000</item>
