--- a/app/src/main/res/layout/fragment_carrier_verify_phone.xml
+++ b/app/src/main/res/layout/fragment_carrier_verify_phone.xml
@@ -2,21 +2,70 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/PaymentMethods.DialogCardStyle"
-    android:animateLayoutChanges="true"
     android:theme="@style/MaterialAppTheme"
+    style="@style/PaymentMethods.DialogCardStyle"
     >
+
+  <ProgressBar
+      android:id="@+id/progress_bar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:indeterminateDrawable="@drawable/gradient_progress"
+      android:visibility="gone"
+      app:layout_constraintBottom_toTopOf="@id/purchase_bonus"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/line_separator"
+      />
+
+  <TextView
+      android:id="@+id/title"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="18dp"
+      android:text="@string/carrier_billing_insert_phone_body"
+      app:layout_constraintLeft_toLeftOf="@id/payment_methods_header"
+      app:layout_constraintTop_toBottomOf="@+id/line_separator"
+      style="@style/PaymentMethods.CarrierBilling.Title"
+      />
+
+  <TextView
+      android:id="@+id/disclaimer"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/carrier_billing_fees_disclaimer"
+      app:layout_constraintLeft_toLeftOf="@id/payment_methods_header"
+      app:layout_constraintTop_toBottomOf="@+id/title"
+      style="@style/PaymentMethods.CarrierBilling.Description"
+      />
+
+  <androidx.constraintlayout.widget.Group
+      android:id="@+id/content_group"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:constraint_referenced_ids="title, disclaimer, phone_number_layout"
+      />
 
   <com.asfoundation.wallet.ui.iab.payments.common.PaymentsHeaderView
       android:id="@+id/payment_methods_header"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
+      android:layout_marginEnd="16dp"
       android:layout_marginStart="16dp"
       android:layout_marginTop="16dp"
-      android:layout_marginEnd="16dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
+      />
+
+  <com.asfoundation.wallet.ui.iab.payments.common.PurchaseBonusView
+      android:id="@+id/purchase_bonus"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="24dp"
+      app:layout_constraintEnd_toEndOf="@+id/payment_methods_header"
+      app:layout_constraintStart_toStartOf="@+id/payment_methods_header"
+      app:layout_constraintTop_toBottomOf="@+id/phone_number_layout"
       />
 
   <com.asfoundation.wallet.ui.iab.payments.common.SeparatorView
@@ -30,30 +79,20 @@
       app:line_type="dashed"
       />
 
-  <TextView
-      android:id="@+id/title"
-      style="@style/PaymentMethods.CarrierBilling.Title"
-      android:layout_width="wrap_content"
+  <com.asfoundation.wallet.ui.iab.payments.common.SeparatorView
+      android:id="@+id/bottom_separator_buttons"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="18dp"
-      android:text="@string/carrier_billing_insert_phone_body"
-      app:layout_constraintLeft_toLeftOf="@id/payment_methods_header"
-      app:layout_constraintTop_toBottomOf="@+id/line_separator"
-      />
-
-  <TextView
-      android:id="@+id/disclaimer"
-      style="@style/PaymentMethods.CarrierBilling.Description"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/carrier_billing_fees_disclaimer"
-      app:layout_constraintLeft_toLeftOf="@id/payment_methods_header"
-      app:layout_constraintTop_toBottomOf="@+id/title"
+      android:layout_marginBottom="8dp"
+      android:layout_marginTop="15dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/purchase_bonus"
+      app:line_type="solid"
       />
 
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/phone_number_layout"
-      style="@style/BillingTextInputLayout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
@@ -61,6 +100,7 @@
       app:layout_constraintEnd_toEndOf="@+id/payment_methods_header"
       app:layout_constraintStart_toStartOf="@+id/payment_methods_header"
       app:layout_constraintTop_toBottomOf="@+id/disclaimer"
+      style="@style/BillingTextInputLayout"
       >
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/phone_number"
@@ -73,31 +113,9 @@
         />
   </com.google.android.material.textfield.TextInputLayout>
 
-  <com.asfoundation.wallet.ui.iab.payments.common.PurchaseBonusView
-      android:id="@+id/purchase_bonus"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="24dp"
-      app:layout_constraintEnd_toEndOf="@+id/payment_methods_header"
-      app:layout_constraintStart_toStartOf="@+id/payment_methods_header"
-      app:layout_constraintTop_toBottomOf="@+id/phone_number_layout"
-      />
-
-  <com.asfoundation.wallet.ui.iab.payments.common.SeparatorView
-      android:id="@+id/bottom_separator_buttons"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="15dp"
-      android:layout_marginBottom="8dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/purchase_bonus"
-      app:line_type="solid"
-      />
-
   <include
-      android:id="@+id/dialog_buy_buttons"
       layout="@layout/dialog_buy_buttons_payment_methods"
+      android:id="@+id/dialog_buy_buttons"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
