--- a/app/src/main/res/values/styles_views.xml
+++ b/app/src/main/res/values/styles_views.xml
@@ -2,9 +2,13 @@
 <resources>
 
   <declare-styleable name="SeparatorView">
-    <attr name="line_type" format="enum">
+    <attr format="enum" name="line_type">
       <enum name="solid" value="0" />
       <enum name="dashed" value="1" />
+    </attr>
+    <attr format="enum" name="line_orientation">
+      <enum name="horizontal" value="0" />
+      <enum name="vertical" value="1" />
     </attr>
   </declare-styleable>
 
