[WAL-35] Fixed more_details button not working

--- a/app/src/main/res/layout/layout_reverted_transaction.xml
+++ b/app/src/main/res/layout/layout_reverted_transaction.xml
@@ -196,7 +196,7 @@
           />
 
       <Button
-          android:id="@+id/more_detail"
+          android:id="@+id/reverted_more_detail"
           style="@style/TransactionDetailsButtonStyle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
