--- a/app/src/main/res/layout-land/fragment_backup_wallet_layout.xml
+++ b/app/src/main/res/layout-land/fragment_backup_wallet_layout.xml
@@ -13,6 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusableInTouchMode="true"
         android:orientation="vertical"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
@@ -62,24 +63,21 @@
 
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/password_container"
-          style="@style/BackupRestoreTextInputLayout"
+          style="@style/PasswordTextInputLayout"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="14dp"
           android:layout_marginEnd="4dp"
-          android:hint="@string/backup_password"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="@id/half_vertical_guideline"
           app:layout_constraintTop_toBottomOf="@id/password_label_ic"
-          app:passwordToggleEnabled="true"
           >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
+            style="@style/PasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-            android:inputType="textPassword"
             android:padding="16dp"
             />
       </com.google.android.material.textfield.TextInputLayout>
