--- a/app/src/main/res/layout-land/layout_billing_address.xml
+++ b/app/src/main/res/layout-land/layout_billing_address.xml
@@ -18,12 +18,9 @@
       >
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/address"
+        style="@style/BillingAddressInputEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-        android:inputType="text"
-        android:maxLines="1"
-        android:textSize="14sp"
         tools:text="1600 Amphitheatre Parkway"
         />
   </com.google.android.material.textfield.TextInputLayout>
@@ -41,11 +38,9 @@
       >
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/number"
+        style="@style/BillingAddressInputEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-        android:maxLines="1"
-        android:textSize="14sp"
         tools:text="36"
         />
   </com.google.android.material.textfield.TextInputLayout>
