--- a/app/src/main/res/layout/restore_wallet_password_layout.xml
+++ b/app/src/main/res/layout/restore_wallet_password_layout.xml
@@ -46,24 +46,21 @@
 
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/label_input"
-          style="@style/BackupRestoreTextInputLayout"
+          style="@style/PasswordTextInputLayout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="24dp"
           android:layout_marginEnd="16dp"
           app:layout_constraintTop_toBottomOf="@id/wallet_card"
-          app:passwordToggleEnabled="true"
           >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_edit_text"
+            style="@style/PasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="top"
-            android:hint="@string/prompt_password"
-            android:imeOptions="actionUnspecified|flagNoFullscreen|flagNoExtractUi"
-            android:inputType="textPassword"
             />
       </com.google.android.material.textfield.TextInputLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
